--- a/rekap.html
+++ b/rekap.html
@@ -5,64 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Rekap Kas Kelas</title>
   <style>
+/* RESET */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* WARNA DASAR */
 body {
   font-family: 'Poppins', sans-serif;
   background: #f7f9fc;
-  margin: 0;
-  padding: 20px;
   color: #333;
+  padding: 15px;
 }
 
+/* JUDUL */
 h2 {
   text-align: center;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 700;
   color: #2d89e5;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 h3 {
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
   color: #2d89e5;
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
-/* Tombol dan Input */
-.form-container {
-  max-width: 600px;
-  margin: 20px auto;
-  background: #ffffff;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.07);
-}
-
-input, select {
-  width: 100%;
-  padding: 12px 15px;
-  margin: 10px 0;
-  border-radius: 10px;
-  border: 1.5px solid #cfd8dc;
-  font-size: 15px;
-  font-weight: 500;
-  background: #f9fbfd;
-  box-sizing: border-box;
-  transition: 0.3s;
-}
-
-input:focus, select:focus {
-  outline: none;
-  border-color: #2d89e5;
-  background: #fff;
-  box-shadow: 0 0 10px rgba(45,137,229,0.2);
-}
-
+/* TOMBOL */
 button {
-  width: auto;
-  min-width: 120px;
-  max-width: 200px;
   padding: 12px 20px;
   margin: 10px 8px;
   border-radius: 10px;
@@ -81,45 +57,69 @@ button:hover {
   box-shadow: 0 8px 20px rgba(45,137,229,0.4);
 }
 
-button:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
+/* FORM */
+input, select {
+  width: 100%;
+  padding: 12px 15px;
+  margin: 10px 0;
+  border-radius: 10px;
+  border: 1.5px solid #cfd8dc;
+  font-size: 15px;
+  background: #f9fbfd;
 }
 
-/* Rekap Box */
-.rekap-box {
-  background: #ffffff;
-  padding: 25px;
+input:focus, select:focus {
+  border-color: #2d89e5;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(45,137,229,0.2);
+  outline: none;
+}
+
+/* BOX */
+.rekap-box, .form-container {
+  background: #fff;
+  padding: 20px;
+  margin: 15px auto;
   border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-  margin: 30px auto;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.07);
   max-width: 800px;
-  text-align: center;
-  font-size: 18px;
-  color: #2d89e5;
-  font-weight: bold;
+  width: 100%;
 }
 
-/* Tabel */
+/* TOMBOL ATAS */
+.tombol-atas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+/* TABEL */
+.table-container {
+  overflow-x: auto;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.07);
+  margin: 15px 0;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
-  background: #ffffff;
-  margin: 20px 0;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.07);
+  min-width: 600px;
 }
 
 th, td {
   border: 1.5px solid #cfd8dc;
-  padding: 14px;
+  padding: 12px;
   text-align: center;
   font-size: 12px;
 }
 
 th {
   background: linear-gradient(135deg, #2d89e5, #64b5f6);
-  color: #fff;
-  font-weight: 700;
+  color: white;
 }
 
 tr:nth-child(even) td {
@@ -130,78 +130,55 @@ tr:hover td {
   background: #e3f2fd;
 }
 
-/* Tombol Atas */
-.tombol-atas {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 15px;
-  margin-bottom: 20px;
-}
-
-/* Pagination */
+/* PAGINATION */
 #pagination, #paginationMasuk {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 8px;
-  margin: 20px auto;
-  width: auto;
+  margin-top: 10px;
 }
 
 #pagination button, #paginationMasuk button {
-  padding: 10px 16px;
-  font-size: 15px;
-  font-weight: 600;
-  color: #333;
-  background: #e0e0e0;
-  border: none;
+  margin: 5px;
+  font-size: 14px;
+  padding: 8px 12px;
   border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-#pagination button:hover, #paginationMasuk button:hover {
-  background: #2d89e5;
-  color: #fff;
+  background: #e0e0e0;
+  color: #333;
+  transition: 0.3s;
 }
 
 #pagination button.active, #paginationMasuk button.active {
   background: linear-gradient(135deg, #2d89e5, #64b5f6);
-  color: #fff;
-  box-shadow: 0 4px 12px rgba(45,137,229,0.4);
+  color: white;
 }
 
-/* Responsive */
+/* MODAL EDIT */
+#editModal {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+#editModal > div {
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  width: 90%;
+  max-width: 400px;
+}
+
+/* RESPONSIVE */
 @media (max-width: 600px) {
-  body { padding: 15px; }
-  h2 { font-size: 26px; }
+  h2 { font-size: 24px; }
   h3 { font-size: 18px; }
-}
-
-/* Fix agar tabel responsive */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  background: #ffffff;
-  margin: 20px 0;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.07);
-  overflow-x: auto;
-  display: block;
-}
-
-/* Responsive wrapper untuk tabel */
-.table-container {
-  overflow-x: auto;
-  width: 100%;
-}
-
-/* Perbaiki container supaya tidak melebihi layar */
-.form-container, .rekap-box {
-  width: 100%;
-  box-sizing: border-box;
-  max-width: 100%;
+  table { min-width: 100%; }
 }
 
 </style>
@@ -257,6 +234,7 @@ table {
     </table>
 </div>
 <div id="paginationMasuk"></div>
+
 <div id="editModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); justify-content:center; align-items:center; z-index:999;">
   <div style="background:white; padding:20px; border-radius:15px; width:90%; max-width:400px; box-shadow:0 10px 25px rgba(0,0,0,0.2);">
     <h3>Edit Pengeluaran</h3>
