--- a/index.html
+++ b/index.html
@@ -144,10 +144,18 @@ button:hover {
 }
 
 .kalender-item h3 {
-  font-size: 20px;
+  font-family: 'Emblema One', cursive;
+  font-size: 30px;
   color: #2d89e5;
+  background: linear-gradient(135deg, #2d89e5, #64b5f6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 15px;
+  margin-top: -10px; /* Geser ke atas */
+  text-shadow: 2px 2px 8px rgba(45,137,229,0.2);
 }
+
+
 
 .status {
   padding: 10px;
